<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawingActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/line_thickness"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>

    <Spinner
        android:id="@+id/line_thickness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:entries="@array/line_thickness_options"
        android:prompt="@string/spinner_prompt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/line_color" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:columnOrderPreserved="false"
        android:columnCount="3"
        android:rowCount="3"
        >

        <ImageButton
            android:id="@+id/key_up"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_column="1"
            android:src="@drawable/ic_keyboard_arrow_up_black_24dp__1_"
            android:onClick="KeyPressed"/>

        <ImageButton
            android:id="@+id/key_down"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp__1_"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="KeyPressed"
            />

        <ImageButton
            android:id="@+id/key_left"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_row="1"
            android:layout_column="0"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp__1_"
            android:onClick="KeyPressed"/>

        <ImageButton
            android:id="@+id/key_right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp__1_"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="KeyPressed"/>


    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="140dp"
        >

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/paint1"
            android:backgroundTint="@color/paint1"
            android:onClick="ChooseColor"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/paint2"
            android:backgroundTint="@color/paint2"
            android:onClick="ChooseColor"
            android:layout_margin="5dp"
            />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/paint3"
            android:backgroundTint="@color/paint3"
            android:onClick="ChooseColor"
            android:layout_margin="5dp"
            />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/paint4"
            android:backgroundTint="@color/paint4"
            android:onClick="ChooseColor"
            android:layout_margin="5dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clear_drawing"
            android:backgroundTint="@color/light_blue"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/clear_button"
            android:onClick="clearCanvas"
            />

    </LinearLayout>


    <com.example.playing_with_animations.DrawingView
        android:layout_height="390dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/drawing_image"
        android:layout_marginTop="220dp">

        </com.example.playing_with_animations.DrawingView>

    </RelativeLayout>